# django-inngest

./: pyproject.toml
src/django_inngest/: __init__.py  client.py  defaults.py  urls.py
tests/: __init__.py  settings.py
